<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/splash"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:screenOrientation="portrait"
    android:theme="@android:style/Theme"
    android:windowActionBar="true"
    android:windowNoTitle="false"
    android:windowFullscreen="false"
    android:fitsSystemWindows="true"
    tools:context=".ui.LauncherFragment">

    <ImageView
            android:id="@+id/backgroundImage"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/background"
            android:scaleType="fitXY"
            android:src="@drawable/wallpaper_large"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/subLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.bluebillywig.bbnativeplayersdk_demo.SquareButton
                android:id="@+id/apiButton"
                android:layout_width="0dp"
                android:layout_height="120dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/gradient_api"
                android:stateListAnimator="@drawable/gradient_webview"
                android:text="@string/apiButtonText"
                android:textFontWeight="700"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="?attr/colorOnPrimary"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/videoListButton"
                app:layout_constraintTop_toTopOf="parent" />
            <EditText
                android:id="@+id/apiTextField"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_marginStart="0dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="0dp"
                android:background="@drawable/gradient_api"
                android:text="https://testsuite.acc.bbvms.com/p/puc_chromecast_airplay/c/7709.json"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="?attr/colorOnPrimary"
                android:textSize="12dp"
                app:layout_constraintStart_toStartOf="@+id/apiButton"
                app:layout_constraintEnd_toEndOf="@+id/apiButton"
                app:layout_constraintTop_toTopOf="parent" />

            <com.bluebillywig.bbnativeplayersdk_demo.SquareButton
                android:id="@+id/videoListButton"
                android:layout_width="0dp"
                android:layout_height="120dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/gradient_videolist"
                android:text="@string/videoListButtonText"
                android:textFontWeight="700"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="?attr/colorOnPrimary"
                app:layout_constraintStart_toEndOf="@+id/apiButton"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.bluebillywig.bbnativeplayersdk_demo.SquareButton
                android:id="@+id/inOutViewButton"
                android:layout_width="0dp"
                android:layout_height="120dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/gradient_inoutview"
                android:text="@string/inOutViewButtonText"
                android:textFontWeight="700"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="?attr/colorOnPrimary"
                app:layout_constraintEnd_toStartOf="@+id/outstreamButton"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/apiButton" />
            <EditText
                android:id="@+id/inOutViewTextField"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_marginStart="0dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="0dp"
                android:background="@drawable/gradient_inoutview"
                android:text="https://demo.bbvms.com/p/native_sdk_inoutview/c/4256635.json"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="?attr/colorOnPrimary"
                android:textSize="12dp"
                app:layout_constraintStart_toStartOf="@+id/inOutViewButton"
                app:layout_constraintEnd_toEndOf="@+id/inOutViewButton"
                app:layout_constraintTop_toBottomOf="@+id/apiButton" />

            <com.bluebillywig.bbnativeplayersdk_demo.SquareButton
                android:id="@+id/outstreamButton"
                android:layout_width="0dp"
                android:layout_height="120dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/gradient_outstream"
                android:text="@string/outstreamButtonText"
                android:textFontWeight="700"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="?attr/colorOnPrimary"
                app:layout_constraintStart_toEndOf="@+id/inOutViewButton"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/videoListButton" />
            <EditText
                android:id="@+id/outstreamTextField"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_marginStart="0dp"
                android:layout_marginTop="0dp"
                android:layout_marginEnd="0dp"
                android:background="@drawable/gradient_outstream"
                android:text="https://demo.bbvms.com/a/native_sdk_outstream.json"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="?attr/colorOnPrimary"
                android:textSize="12dp"
                app:layout_constraintStart_toStartOf="@+id/outstreamButton"
                app:layout_constraintEnd_toEndOf="@+id/outstreamButton"
                app:layout_constraintTop_toTopOf="@+id/outstreamButton" />

            <com.bluebillywig.bbnativeplayersdk_demo.SquareButton
                android:id="@+id/prePostRollButton"
                android:layout_width="0dp"
                android:layout_height="120dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/gradient_prepostroll"
                android:text="@string/prePostRollButtonText"
                android:textFontWeight="700"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="?attr/colorOnPrimary"
                app:layout_constraintEnd_toStartOf="@+id/webviewButton"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/inOutViewButton" />

            <com.bluebillywig.bbnativeplayersdk_demo.SquareButton
                android:id="@+id/webviewButton"
                android:layout_width="0dp"
                android:layout_height="120dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/gradient_webview"
                android:text="@string/webviewButtonText"
                android:textFontWeight="700"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="?attr/colorOnPrimary"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/prePostRollButton"
                app:layout_constraintTop_toBottomOf="@+id/outstreamButton" />

            <com.bluebillywig.bbnativeplayersdk_demo.SquareButton
                android:id="@+id/shortsButton"
                android:layout_width="0dp"
                android:layout_height="120dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/gradient_videolist"
                android:text="@string/shortsButtonText"
                android:textFontWeight="700"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="?attr/colorOnPrimary"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/webviewButton"
                app:layout_constraintTop_toBottomOf="@+id/prePostRollButton" />
            <EditText
                android:id="@+id/shortsTextField"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_marginStart="0dp"
                android:layout_marginTop="0dp"
                android:layout_marginEnd="0dp"
                android:background="@drawable/gradient_videolist"
                android:text="https://demo.bbvms.com/sh/58.json"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="?attr/colorOnPrimary"
                android:textSize="12dp"
                app:layout_constraintStart_toStartOf="@+id/shortsButton"
                app:layout_constraintEnd_toEndOf="@+id/shortsButton"
                app:layout_constraintTop_toTopOf="@+id/shortsButton" />

            <com.bluebillywig.bbnativeplayersdk_demo.SquareButton
                android:id="@+id/shortsShelfButton"
                android:layout_width="0dp"
                android:layout_height="120dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/gradient_inoutview"
                android:text="@string/shortsShelfButtonText"
                android:textFontWeight="700"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="?attr/colorOnPrimary"
                app:layout_constraintStart_toEndOf="@+id/shortsButton"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/webviewButton" />
            <EditText
                android:id="@+id/shortsShelfTextField"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_marginStart="0dp"
                android:layout_marginTop="0dp"
                android:layout_marginEnd="0dp"
                android:background="@drawable/gradient_inoutview"
                android:text="https://demo.bbvms.com/sh/58.json"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="?attr/colorOnPrimary"
                android:textSize="12dp"
                app:layout_constraintStart_toStartOf="@+id/shortsShelfButton"
                app:layout_constraintEnd_toEndOf="@+id/shortsShelfButton"
                app:layout_constraintTop_toTopOf="@+id/shortsShelfButton" />

            <com.bluebillywig.bbnativeplayersdk_demo.SquareButton
                android:id="@+id/rendererButton"
                android:layout_width="0dp"
                android:layout_height="120dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/gradient_outstream"
                android:text="@string/rendererButtonText"
                android:textFontWeight="700"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="?attr/colorOnPrimary"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/multiPlayerButton"
                app:layout_constraintTop_toBottomOf="@+id/shortsButton" />
            <EditText
                android:id="@+id/rendererTextField"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_marginStart="0dp"
                android:layout_marginTop="0dp"
                android:layout_marginEnd="0dp"
                android:background="@drawable/gradient_outstream"
                android:text="https://demo.bbvms.com/r/puc_outstream_skinless.json"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="?attr/colorOnPrimary"
                android:textSize="12dp"
                app:layout_constraintStart_toStartOf="@+id/rendererButton"
                app:layout_constraintEnd_toEndOf="@+id/rendererButton"
                app:layout_constraintTop_toTopOf="@+id/rendererButton" />

            <com.bluebillywig.bbnativeplayersdk_demo.SquareButton
                android:id="@+id/multiPlayerButton"
                android:layout_width="0dp"
                android:layout_height="120dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/gradient_prepostroll"
                android:text="@string/multiPlayerButtonText"
                android:textFontWeight="700"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="?attr/colorOnPrimary"
                app:layout_constraintStart_toEndOf="@+id/rendererButton"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/shortsShelfButton" />
        </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>